--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 634px;
   background-color: #f3c1f8;
-  margin: 0 auto;
+  margin: 0 auto 110px auto;
   align-items: center;
 }
 
@@ -53,6 +53,12 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .promo {
+    margin-bottom: 90px;
+  }
+}
+
 @media screen and (max-width: 690px) {
   .promo__image {
     height: 230px;
@@ -63,6 +69,7 @@
 @media screen and (max-width: 520px) {
   .promo {
     height: 704px;
+    margin-bottom: 70px;
   }
   .promo__title {
     font-size: 31px;
