--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -1,11 +1,3 @@
-.about-project {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-}
-
 .about-project__container {
   display: flex;
   flex-direction: column;
@@ -100,6 +92,16 @@
   background-color: #f2f2f2;
   color: #000000;
   font-weight: 400;
+}
+
+@media screen and (min-width: 1285px) {
+  .about-project {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+  }
 }
 
 @media screen and (max-width: 1080px) {
