--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,12 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  max-width: 1280px;
   margin: 0 70px 47px 70px;
-}
-
-.header_promo {
-  width: 89%;
 }
 
 .header__container {
@@ -96,6 +91,13 @@
   display: none;
 }
 
+@media screen and (min-width: 1285px) {
+  header {
+    max-width: 1280px;
+    width: 100%;
+  }
+}
+
 @media screen and (max-width: 1270px) {
   .header_promo {
     margin-bottom: 296px;
@@ -109,7 +111,6 @@
 
   .header_promo {
     margin-bottom: 296px;
-    width: 92%;
   }
 
   .header__button {
@@ -221,7 +222,6 @@
 
   .header_promo {
     margin-bottom: 179px;
-    width: 91%;
   }
 
   .header-logo {
