--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -2,15 +2,19 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 634px;
   background-color: #f3c1f8;
   margin: 0 auto 110px auto;
-  align-items: center;
+}
+
+.promo__container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 70px 60px 70px;
 }
 
 .promo__title {
   padding: 0;
-  margin: 0 0 0 70px;
+  margin: 0 0 102px 0;
   font-family: "Inter", "Arial", "Helvetica", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -19,34 +23,42 @@
   letter-spacing: -0.04em;
   color: #000000;
   max-width: 626px;
+  align-self: flex-start;
 }
 
 .promo__image {
   max-width: 722px;
   height: 244px;
-  margin: 102px 70px 60px 488px;
   object-fit: cover;
+  align-self: flex-end;
 }
 
-@media screen and (max-width: 1270px) {
+@media screen and (min-width: 1285px) {
   .promo {
-    height: 918px;
+    align-items: center;
   }
 
   .promo__container {
-    display: flex;
-    flex-direction: column;
+    max-width: 1280px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1270px) {
+  .promo__container {
+    margin: 0 44px 63px 44px;
     justify-content: center;
     align-items: center;
     text-align: center;
   }
 
   .promo__title {
-    margin: 0 0 133px 0;
+    align-self: auto;
+    margin-bottom: 133px;
   }
 
   .promo__image {
-    margin: 0 0 0 0;
+    align-self: auto;
     max-width: 680px;
     width: 100%;
     object-fit: contain;
@@ -60,24 +72,21 @@
 }
 
 @media screen and (max-width: 690px) {
-  .promo__image {
-    height: 230px;
-    object-fit: cover;
-  }
-}
-
-@media screen and (max-width: 520px) {
   .promo {
-    height: 704px;
     margin-bottom: 70px;
+  }
+  .promo__container {
+    margin: 0 0 40px 0;
   }
   .promo__title {
     font-size: 31px;
     line-height: 39px;
-    margin-bottom: 60px;
+    margin: 0 10px 60px 10px;
   }
 
   .promo__image {
     height: 230px;
+    object-fit: cover;
+    width: 100%;
   }
 }
