--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,8 @@
+.header-centering {
+  display: flex;
+  flex-direction: column;
+}
+
 .header {
   display: flex;
   flex-direction: row;
@@ -92,6 +97,10 @@
 }
 
 @media screen and (min-width: 1285px) {
+  .header-centering {
+    align-items: center;
+  }
+
   .header {
     max-width: 1280px;
     width: 100%;
@@ -251,6 +260,6 @@
 
   .header__cross {
     top: 10px;
-    right: 32px;
+    right: 18px;
   }
 }
