--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -76,6 +76,34 @@
   color: #ffffff;
 }
 
+.movie__delete-button {
+  align-self: center;
+  max-width: 100px;
+  width: 100%;
+  height: 29px;
+  margin: 0 0 18px 0;
+  padding: 0;
+  background: #f9f9f9;
+  border: none;
+  border-radius: 30px;
+  text-align: center;
+  font-family: "Inter", "Arial", "Helvetica", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 11px;
+  color: #000000;
+  cursor: pointer;
+  -webkit-transition: opacity 0.5s ease-in;
+  transition: opacity 0.5s ease-in;
+}
+
+.movie__delete-button:hover {
+  opacity: 0.7;
+  -webkit-transition: opacity 0.5s ease-in;
+  transition: opacity 0.5s ease-in;
+}
+
 @media screen and (min-width: 1285px) {
   .movie {
     max-width: 100%;
@@ -112,6 +140,10 @@
   }
 
   .movie__save-button {
+    margin-bottom: 14px;
+  }
+
+  .movie__delete-button {
     margin-bottom: 14px;
   }
 }
