--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -30,8 +30,7 @@
 
 .portfolio__item {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
   padding: 0 0 19px 0;
   margin: 0 0 20px 0;
   border-bottom: 1px solid #e8e8e8;
@@ -40,6 +39,23 @@
 .portfolio__item_no-border {
   margin-bottom: 0;
   border-bottom: none;
+}
+
+.portfolio__link {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-right: 5px;
+  text-decoration: none;
+  cursor: pointer;
+  -webkit-transition: opacity 0.5s ease-in;
+  transition: opacity 0.5s ease-in;
+}
+
+.portfolio__link:hover {
+  opacity: 0.7;
+  -webkit-transition: opacity 0.5s ease-out;
+  transition: opacity 0.5s ease-out;
 }
 
 .portfolio__subtitle {
@@ -54,18 +70,8 @@
   color: #000000;
 }
 
-.portfolio__link {
-  margin-top: 19px;
-  margin-right: 5px;
-  cursor: pointer;
-  -webkit-transition: opacity 0.5s ease-in;
-  transition: opacity 0.5s ease-in;
-}
-
-.portfolio__link:hover {
-  opacity: 0.7;
-  -webkit-transition: opacity 0.5s ease-out;
-  transition: opacity 0.5s ease-out;
+.portfolio__arrow {
+  margin-top: 4px;
 }
 
 @media screen and (min-width: 1285px) {
@@ -100,13 +106,9 @@
     line-height: 28px;
   }
 
-  .portfolio__link {
-    margin-top: 4px;
-    margin-right: 5px;
-  }
-
   .portfolio__arrow {
     width: 12px;
+    margin-top: 0;
   }
 }
 
