--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   background-color: #f3c1f8;
-  margin: 0 auto 110px auto;
+  margin: -1px auto 110px auto;
 }
 
 .promo__container {
