--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,9 +1,9 @@
-.about-me-container {
+.about-me {
   display: flex;
   flex-direction: column;
 }
 
-.about-me {
+.about-me__container {
   display: flex;
   flex-direction: column;
   margin: 110px 70px 101px 70px;
@@ -99,18 +99,18 @@
 }
 
 @media screen and (min-width: 1285px) {
-  .about-me-container {
+  .about-me {
     align-items: center;
   }
 
-  .about-me {
+  .about-me__container {
     max-width: 1280px;
     width: 100%;
   }
 }
 
 @media screen and (max-width: 820px) {
-  .about-me {
+  .about-me__container {
     margin: 90px 50px 91px 50px;
   }
 
@@ -185,7 +185,7 @@
 }
 
 @media screen and (max-width: 520px) {
-  .about-me {
+  .about-me__container {
     margin: 70px 14px 70px 14px;
   }
 }
