--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,10 +1,10 @@
-.profile-centering {
+.profile {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.profile {
+.profile__container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -112,7 +112,7 @@
 }
 
 @media screen and (max-width: 520px) {
-  .profile {
+  .profile__container {
     max-width: 260px;
   }
 
