--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -1,11 +1,11 @@
-.techs-background {
+.techs {
   display: flex;
   flex-direction: column;
   background-color: #f5f5f5;
   width: 100%;
 }
 
-.techs {
+.techs__container {
   display: flex;
   flex-direction: column;
   margin: 100px 70px 100px 70px;
@@ -24,7 +24,7 @@
   color: #000000;
 }
 
-.techs__container {
+.techs__content {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -82,17 +82,17 @@
 }
 
 @media screen and (min-width: 1285px) {
-  .techs-background {
+  .techs {
     align-items: center;
   }
 
-  .techs {
+  .techs__container {
     width: 1280px;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .techs {
+  .techs__container {
     margin: 92px 50px 90px 50px;
   }
 
@@ -129,7 +129,7 @@
 }
 
 @media screen and (max-width: 400px) {
-  .techs {
+  .techs__container {
     margin: 70px 18px 70px 18px;
   }
 
