--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -44,7 +44,8 @@
 }
 
 .search__input:focus {
-  outline: none;
+  outline: 2px inset rgba(0, 0, 0, 0.1);
+  border-radius: 9px;
 }
 
 .search__button {
