--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,5 +1,4 @@
 .movie {
-  max-width: 360px;
   padding: 0;
   display: flex;
   flex-direction: column;
@@ -18,6 +17,10 @@
 }
 
 .movie__title {
+  max-width: 240px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   font-family: "Inter", "Arial", "Helvetica", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -40,7 +43,9 @@
 
 .movie__cover {
   width: 100%;
+  height: 200px;
   margin-bottom: 18px;
+  object-fit: cover;
 }
 
 .movie__save-button {
@@ -114,6 +119,14 @@
   .movie {
     max-width: 342px;
   }
+
+  .movie__title {
+    max-width: 224px;
+  }
+
+  .movie__cover {
+    height: 190px;
+  }
 }
 
 @media screen and (max-width: 685px) {
@@ -129,6 +142,7 @@
 
   .movie__title {
     font-size: 12px;
+    max-width: 200px;
   }
 
   .movie__duration {
@@ -137,6 +151,7 @@
 
   .movie__cover {
     margin-bottom: 14px;
+    height: 168px;
   }
 
   .movie__save-button {
