--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -18,6 +18,7 @@
 .movies__button {
   height: 36px;
   width: 100%;
+  max-width: 1280px;
   border: transparent;
   background: #f9f9f9;
   border-radius: 6px;
@@ -41,6 +42,7 @@
 @media screen and (min-width: 1285px) {
   .movies {
     align-items: center;
+    margin: 0 0 97px 0;
   }
 
   .movies__list {
