--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -77,6 +77,15 @@
   transition: opacity 0.5s ease-out;
 }
 
+.form__button_disabled {
+  background: #f8f8f8;
+  color: #c2c2c2;
+}
+
+.form__save-button_disabled:hover {
+  opacity: 1;
+}
+
 .form-container__redirect-links {
   display: flex;
   flex-direction: row;
