--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -31,6 +31,10 @@
   outline: 2px inset rgba(0, 0, 0, 0.1);
 }
 
+.form__input_password {
+  margin-bottom: 50px;
+}
+
 .form__input-error {
   padding: 0;
   margin: 0 0 10px 0;
