--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -54,6 +54,18 @@
   margin: 0;
 }
 
+.form__server-error {
+  padding: 0;
+  margin: 0 0 20px 0;
+  font-family: "Inter", "Arial", "Helvetica", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #ff4062;
+  text-align: center;
+}
+
 .form__button {
   background: #000000;
   border: none;
