--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -85,6 +85,10 @@
   transition: opacity 0.5s ease-out;
 }
 
+.header__button-icon_promo {
+  background-color: #f3c1f8;
+}
+
 .header__burger {
   display: none;
 }
@@ -156,6 +160,10 @@
     text-decoration: none;
     color: #000000;
     cursor: pointer;
+  }
+
+  .header__button-icon_promo {
+    background-color: rgba(249, 249, 249, 1);
   }
 
   .header__burger_active {
