--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -82,6 +82,7 @@
 
 .profile-form__input:disabled {
   background-color: #ffff;
+  cursor: default;
 }
 
 .profile-form__input:active {
@@ -139,6 +140,7 @@
   color: #000000;
   -webkit-transition: font-weight 0.5s ease-in;
   transition: font-weight 0.5s ease-in;
+  cursor: pointer;
 }
 
 .profile-form__button:hover {
@@ -166,6 +168,17 @@
   color: #ff4062;
 }
 
+.profile-form__server-succsess {
+  padding: 0;
+  margin: 0 0 20px 0;
+  font-family: "Inter", "Arial", "Helvetica", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: black;
+}
+
 .profile-form__save-button {
   display: none;
 }
@@ -188,6 +201,7 @@
   text-align: center;
   -webkit-transition: opacity 0.5s ease-in;
   transition: opacity 0.5s ease-in;
+  cursor: pointer;
 }
 
 .profile-form__save-button:hover {
